fix(badge): whitespace nowrap

--- a/packages/vapor/scss/components/badge.scss
+++ b/packages/vapor/scss/components/badge.scss
@@ -8,6 +8,7 @@
     text-transform: capitalize;
     border: var(--default-border);
     border-radius: 8px;
+    white-space: nowrap;
 
     // Variables
     --height: 32px;
